# nino-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
agent/: README.md
agent/python/: Dockerfile  README.md  pyproject.toml
agent/python/evals/: README.md  __init__.py  live_benchmark.py
agent/python/src/: bootstrap.py  demo.py
agent/python/src/api/: app.py  schemas.py
agent/python/src/framework/: __init__.py  conversation.py  loop.py  models.py  ports.py  repositories.py  task_graph.py
agent/python/src/harness/: __init__.py  agents.py  documents.py  langgraph.py  loop.py  orchestrator.py  planning.py  react.py  references.py  scheduler.py  skills.py  validation.py
agent/python/src/infrastructure/: __init__.py  langchain_model.py  memory.py  openai_compatible.py  sqlite.py
agent/python/src/infrastructure/mcp/: __init__.py  client.py  config.py  registry.py
agent/python/src/runtime/: __init__.py  context.py  service.py  task_graph.py
agent/python/tests/: test_adapters.py  test_agents_references.py  test_api.py  test_evaluation_suite.py  test_langgraph_harness.py  test_layered_architecture.py  test_loop_engineering.py  test_mcp_registry.py  test_orchestrator.py  test_persistence_context.py  test_react_harness.py  test_runtime_settings.py  test_task_graph.py  test_task_graph_scheduler.py
blogs/: 01-from-agent-demo-to-harness-boundary.md  02-from-react-loop-to-controlled-kernel.md  03-taskgraph-is-not-a-model-drawing.md  04-reliability-comes-from-state-semantics.md  05-turning-the-harness-into-a-product-backend.md  README.md  (+1 more)
(+89 files in other folders)
